--- a/smcamera/src/main/res/values/strings.xml
+++ b/smcamera/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">smcamera</string>
+
+    <string name="message_camera_loading">Camera loading&#8230;</string>
 </resources>
