Camera screen changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SM Camera App Demo</string>
+    <string name="app_name">SM DVI Camera Demo</string>
 
     <string name="app_name_main">Main Screen</string>
 </resources>
